lint code prettier

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   ],
   "dependencies": {
     "@eeacms/volto-columns-block": "*",
+    "@eeacms/volto-metadata-block": "*",
     "@plone/scripts": "*",
     "volto-form-block": "*",
-    "volto-subblocks": "^2.0.0",
-    "@eeacms/volto-metadata-block": "*"
+    "volto-subblocks": "^2.0.0"
   },
   "devDependencies": {
     "mrs-developer": "*"
