--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@Fosten/volto-happy-theme",
-  "version": "1.2.0",
-  "description": "volto-happy-theme: Volto add-on",
-  "main": "src/index.js",
+  "name": "volto-happy-theme-dev",
+  "version": "1.0.0-alpha.0",
+  "description": "Plone 6 Volto Theme for Happy Baseball",
+  "author": "Brian Davis",
+  "homepage": "https://github.com/fosten/volto-happy-theme",
   "license": "MIT",
   "keywords": [
     "volto-addon",
@@ -11,9 +12,33 @@
     "react"
   ],
   "scripts": {
-    "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon"
+    "preinstall": "npx only-allow pnpm",
+    "start": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto start",
+    "start:prod": "pnpm --filter @plone/volto start:prod",
+    "build": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build",
+    "build:deps": "pnpm --filter @plone/registry --filter @plone/components build",
+    "i18n": "pnpm --filter volto-happy-theme i18n && VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto i18n",
+    "test": "RAZZLE_JEST_CONFIG=$(pwd)/jest-addon.config.js pnpm --filter @plone/volto test -- --passWithNoTests",
+    "lint": "VOLTOCONFIG=$(pwd)/volto.config.js eslint --max-warnings=0 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "VOLTOCONFIG=$(pwd)/volto.config.js eslint --fix 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
+    "prettier": "prettier --check 'packages/**/src/**/*.{js,jsx,ts,tsx}'",
+    "prettier:fix": "prettier --write 'packages/**/src/**/*.{js,jsx,ts,tsx}' ",
+    "stylelint": "stylelint 'packages/**/src/**/*.{css,scss,less}' --allow-empty-input",
+    "stylelint:fix": "stylelint 'packages/**/src/**/*.{css,scss,less}' --fix --allow-empty-input",
+    "dry-release": "pnpm --filter volto-happy-theme dry-release",
+    "release": "pnpm --filter volto-happy-theme release",
+    "release-major-alpha": "pnpm --filter volto-happy-theme release-major-alpha",
+    "release-alpha": "pnpm --filter volto-happy-theme release-alpha",
+    "storybook": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto storybook dev -p 6006 -c $(pwd)/.storybook",
+    "storybook-build": "VOLTOCONFIG=$(pwd)/volto.config.js pnpm --filter @plone/volto build-storybook -c $(pwd)/.storybook"
+  },
+  "dependencies": {
+    "@plone/volto": "workspace:*",
+    "@plone/registry": "workspace:*",
+    "volto-happy-theme": "workspace:*"
   },
   "devDependencies": {
-    "@plone/scripts": "*"
-  }
+    "mrs-developer": "^2.2.0"
+  },
+  "packageManager": "pnpm@9.1.1"
 }
