--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "volto-happy-theme-dev",
-  "version": "1.0.0-alpha.0",
+  "version": "2.1.0",
   "description": "Plone 6 Volto Theme for Happy Baseball",
   "author": "Brian Davis",
   "homepage": "https://github.com/fosten/volto-happy-theme",
